--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,18 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  
+  <!-- 1. DispatcherServlet configuration -->
+  <servlet>
+  	<servlet-name>victor</servlet-name>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <!-- 2. Request mapping -->
+  <servlet-mapping>
+  	<servlet-name>victor</servlet-name>
+  	<url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
