--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,16 @@
 
 	<!-- 1. DispatcherServlet configuration -->
 	<servlet>
-		<servlet-name>>mvc-dispatcher</servlet-name>
+		<servlet-name>mvc-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<!-- 2. Request mapping -->
 	<servlet-mapping>
-		<servlet-name>>mvc-dispatcher</servlet-name>
+		<servlet-name>mvc-dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
 	
 </web-app>
